fixed pipeline errors including formmattin