@@ -2,7 +2,7 @@
 // a tool for configurable software verification:
 // https://cpachecker.sosy-lab.org
 //
-// SPDX-FileCopyupperText: 2021 Dirk Beyer <https://www.sosy-lab.org>
+// SPDX-FileCopyrightText: 2022 Dirk Beyer <https://www.sosy-lab.org>
 //
 // SPDX-License-Identifier: Apache-2.0
 
@@ -185,7 +185,7 @@ public class RangedAnalysisCPA extends AbstractCPA implements ProofCheckerCPA {
 
     List<Path> files = pCfa.getFileNames();
     if (files.size() == 1) {
-      String filename = files.get(0).toAbsolutePath().toString();
+      String filename = files.getFirst().toAbsolutePath().toString();
       String testcasePath = filename.substring(0, filename.lastIndexOf("."));
       if (!suffix.isEmpty()) {
         testcasePath = testcasePath + suffix;
